# touch

./: .gitattributes  .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
assets/characters/: hero-2.aseprite  hero.aseprite
assets/levels/: courtyard.tmx  images.tsx  objects.tsx  outdoors.tsx  room.tmx  sheet.tsx  tiles.tsx  turret.tx
assets/music/: happy-start.mmpz  slow.mmpz
assets/objects/: ball.aseprite  enemy.aseprite  gate.aseprite  tree.aseprite  turret.aseprite
assets/textures/: bamboo-floor.aseprite  grass-2.aseprite  grass.aseprite  road.aseprite  wooden-floor.aseprite  wooden-walls.aseprite
src/: CMakeLists.txt
src/asset-preview/: CMakeLists.txt  main.cpp
src/blob/: CMakeLists.txt  main.cpp
src/blob/lib/: CMakeLists.txt  blob.cpp  format.fbs  header.cpp  pack.cpp  types.cpp  unpacked.cpp
src/blob/lib/include/: blob.hpp
src/blob/lib/include/blob/: blob.hpp  header.hpp  pack.hpp  types.hpp  unpacked.hpp
src/extractor/: CMakeLists.txt  main.cpp
src/extractor/lib/: CMakeLists.txt  extractor.cpp
src/extractor/lib/include/: extractor.hpp
src/gfx/: CMakeLists.txt  init.cpp  resources.cpp  scene.cpp  sdl-wrapper.cpp  view.cpp
src/gfx/include/: gfx.hpp
src/gfx/include/gfx/: init.hpp  resources.hpp  scene.hpp  sdl-wrapper.hpp  view.hpp
src/pack-spritesheet/: CMakeLists.txt  main.cpp
src/touch/: CMakeLists.txt  main.cpp  view.cpp  view.hpp  world.cpp  world.hpp
